--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-daterangepicker": "^3.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
